--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
+    "amqplib": "^0.8.0",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
